--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         }
         
         .accent-glow {
-            text-shadow: 0 0 30px rgba(var(--color-1-rgb), 0.4);
+            text-shadow: 0 0 30px rgba(199, 247, 10, 0.5), 0 0 60px rgba(199, 247, 10, 0.3);
         }
         
         @keyframes slideUp {
